# Qt-TencentVideo

./: CMakeLists.txt  README.md
resources/: Resource.qrc
resources/qss/: topbar.qss
src/: main.cpp
src/ui/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/main/LeftMenu/: LeftMenu.ui  leftmenu.cpp  leftmenu.h
src/ui/main/RightContent/: RightContent.ui  rightcontent.cpp  rightcontent.h
src/ui/main/TopBar/: TopBar.ui  tobbar.cpp  topbar.h
